[project]
name = "customer-support-env"
version = "0.1.0"
description = "Customer Support OpenEnv environment"
authors = [{ name = "Tanishq Maral" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.openenv]
entry_point = "app:app"