[project]
name = "customer-support-env"
version = "0.1.0"
description = "Customer Support OpenEnv environment"
authors = [{ name = "Tanishq Maral" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "server.app:main"